{
    "name": "InputSystem",
    "maps": [
        {
            "name": "NormalActions",
            "id": "9ecfab03-487e-40fd-814e-28c6c979391a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "69d4dcdf-ad5c-492f-9885-9acc82e0076c",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b3ba0706-e210-48dd-9c83-f63d45ff70c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "e2f4f766-a9e3-4815-b440-632371315d92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "540dfd14-ac04-4eeb-a9b2-1bddc4524747",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fd1a669-d22f-482c-bbf7-7d7e1ddbec52",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f9ca654-ee73-4b9d-b8fd-af9bb3bd2457",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}